# frontwork

./: .dockerignore  .gitignore  Cargo.toml  DESIGN_THOUGHTS.md  DOCUMENTATION.md  README.md  deno.bundler.jsonc  deno.client.jsonc  deno.json  deno.jsonc  main_OLD.rs  watch.sh
.github/workflows/: create_docker_image.yaml
frontwork-cli/: Cargo.toml  Dockerfile  LICENSE
frontwork-cli/src/: bundler.rs  download.rs  environment_platform.rs  main.rs  package_json.rs  utils.rs
frontwork-cli/template/: .gitignore  bundle.ts  deno.client.jsonc  deno.jsonc  env.ts  front.ts  i18n.ts  package.json  routes.ts  service.ts  testworker.ts
frontwork-cli/template/i18n/: english.json
frontwork-cli/template/src/: dependencies.ts  i18n.ts  main.client.ts  main.service.ts  main.testworker.ts  style.scss
frontwork-cli/template/src/components/: routes.ts
frontwork-cli/template/src/components/startpage/: startpage.ts
frontwork-cli/template/src/environments/: environment.production.web.ts  environment.staging.web.ts  environment.ts
frontwork-cli/template/src/i18n/: english.json  german.json
frontwork-std/: deno.client.jsonc  deno.jsonc  dom.ts  environment.ts  frontwork-bundler.ts  frontwork-client.ts  frontwork-front.ts  frontwork-service.ts  frontwork-testworker.ts  frontwork.ts  lib.ts  package.json  route.ts  utils.ts  webservice.ts
frontwork-std/test/: test.bundle.ts  test.client.ts  test.front.ts  test.i18n.ts  test.routes.ts  test.second_module.ts  test.service.ts  test.testworker.ts  tsconfig.json
frontwork-std/test/assets/: test.txt
frontwork-std/test/assets/assets/: test.txt
frontwork-std/test/i18n/: english.json  german.json
scripts/: deno.jsonc  git_setup.sh  push_new_version.sh  std_binary_run.sh  template_binary_run.sh  test.sh  test.template.sh  test.ts  testworker.sh  watch.sh
