[package]
name = "frontwork"
version = "0.3.1"
edition = "2021"
authors = ["LuceusXylian <luceusxylian@gmail.com>", "frontwork-org Contributors <https://github.com/frontwork-org>"]
description = "The TypeScript Framework using Deno & Webassembly"
license = "MIT"
repository = "https://github.com/frontwork-org/frontwork"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.23", features = ["blocking", "stream"] }
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
shell = "0.3.2"
time = "0.3.41"
include_dir = "0.7.4"
convert_case = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rusync = "0.7.2"
rsass = "0.29.2"
zip = "4.5.0"
regex = "1.11.1"
indicatif = "0.18.0"
futures-util = "0.3.31"